# hascale

./: ChangeLog.md  README.md  hscale.cabal
app/: Main.hs
src/Music/Scale/Format/: Anamark.hs  Input.hs  Kbm.hs  Kontakt.hs  Scl.hs  Types.hs
